name:                limilin
version:             0.1.0.0
description:         a programming language
homepage:            https://github.com/n7kurosawa/limilin#readme
license:             OtherLicense
license-file:        LICENSE
author:              n.kurosawa
copyright:           2018 n.kurosawa
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable limilin
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parser, Syntax
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec >= 3.0 && < 4,
                       containers >= 0.5.0 && < 6, mtl >= 2.0 && < 3
